--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.0.20
   # google_fonts: ^0.3.8
   # select_form_field: "^1.0.0"
 
